# Bhub_python

./: .gitignore  ANALYTICS.md  BHUB_REFACTORING_PLAN.md  CLAUDE.md  IMPLEMENTACAO_TRADUCAO.md  MIGRATION_GUIDE.md  OPEN_GRAPH_IMPLEMENTATION.md  OPEN_GRAPH_RESUMO.md  README.md  SECURITY_REMAINING.md  docker-compose.prod.yml  env.example  prompt_tradutor.md  upload-to-vps.sh
bhub-backend-python/: .env.example  ARCHITECTURE_REPORT.md  CORS_FIX.md  Dockerfile  Dockerfile.prod  README.md  SECURITY_FIXES_CRITICAL.md  SECURITY_FIXES_HIGH.md  agents.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  tailwind.config.js
bhub-backend-python/alembic/: env.py
bhub-backend-python/alembic/versions/: 001_add_translation_cache.py  002_add_analytics_tables.py  003_add_is_open_access.py  004_add_article_categories_many_to_many.py  005_add_scheduler_locks.py  006_add_refresh_tokens.py  007_fix_analytics_metric_types.py  008_postgres_fts.py
bhub-backend-python/app/: __init__.py  config.py  database.py  main.py
bhub-backend-python/app/ai/: __init__.py  local_llm_service.py  manager.py  model_manager.py
bhub-backend-python/app/api/: __init__.py  deps.py
bhub-backend-python/app/core/: __init__.py  access_token_cookie_middleware.py  alerting.py  analytics_middleware.py  auth_cookie_middleware.py  cookie_transport.py  csrf.py  csrf_middleware.py  exceptions.py  ip_anonymization.py  limiter.py  log_sanitizer.py  logging.py  rate_limiting.py  refresh_token.py  scheduler_lock.py  security.py  security_headers.py  telemetry.py
bhub-backend-python/app/interfaces/: __init__.py  services.py
bhub-backend-python/app/jobs/: __init__.py  scheduler.py  tasks.py
bhub-backend-python/app/ml/: __init__.py  embedding_classifier.py  impact_rating.py
bhub-backend-python/app/models/: __init__.py  analytics.py  article.py  article_category.py  author.py  banner.py  base.py  category.py  contact.py  (+6 more)
bhub-backend-python/config/: env.production.template
bhub-backend-python/docs/: VPS_DEPLOY.md  VPS_MAINTENANCE.md  VPS_UPLOAD.md
bhub-backend-python/scripts/: README.md  __init__.py  add_journal_feeds.py  backup_db.py  cleanup_artifacts.sh  create_superuser.py  diagnose_classification.py  reclassify_articles.py  reprocess_authors.py  reprocess_classification.py  reprocess_classification_simple.py  reprocess_impact_score.py  restore_db.py  seed_feeds.py  setup_local_llm.py  sync_feeds.py  test_classification.py  test_deepseek.py
bhub-backend-python/tests/: __init__.py  conftest.py  test_ai_minimal.py  test_analytics_service.py  test_article_parser_extended.py  test_articles.py  test_auth_flow.py  test_background_tasks_extra.py  test_classification_service_extra.py  test_core_components.py  test_core_utils.py  test_csrf.py  test_csrf_unit.py  test_e2e.py  test_feed_aggregator_minimal.py  test_opengraph_service_minimal.py  test_pdf_service_extracts.py  test_pdf_service_minimal.py  test_permissions.py  test_rate_limit.py  test_services_minimal.py  test_smoke.py  test_web_auth_minimal.py  test_web_routes_counts.py  test_web_routes_minimal.py  test_web_scraper_minimal.py
(+296 files in other folders)
