[project]
name = "bhub-backend"
version = "1.0.0"
description = "BHUB - Plataforma de Agregação de Artigos Científicos em Análise do Comportamento"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "BHUB Team", email = "contato@bhub.com.br"}
]
keywords = ["behavior-analysis", "scientific-articles", "aggregator", "aba", "rft"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    # Framework Web
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "starlette>=0.41.0",
    
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "greenlet>=3.1.0",
    
    # Autenticação
    "fastapi-users[sqlalchemy]>=14.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    
    # Validação
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.2.0",
    
    # HTTP Client
    "httpx>=0.28.0",
    "aiohttp>=3.11.0",
    
    # RSS/Feed Parsing
    "feedparser>=6.0.11",
    "python-dateutil>=2.9.0",
    
    # Web Scraping
    "beautifulsoup4>=4.12.3",
    "selectolax>=0.3.27",
    "lxml>=5.3.0",
    
    # PDF Processing
    "pymupdf>=1.24.0",
    "pdfplumber>=0.11.0",
    
    # Machine Learning
    "sentence-transformers>=3.3.0",
    "torch>=2.5.0",
    "numpy>=2.1.0",
    "scikit-learn>=1.5.0",
    
    # Jobs/Scheduling
    "apscheduler>=3.10.4",
    
    # Logging
    "loguru>=0.7.2",
    
    # Image Processing
    "pillow>=11.0.0",
    
    # Utilities
    "python-slugify>=8.0.4",
    "tenacity>=9.0.0",
    "aiofiles>=24.1.0",
    
    # Rate Limiting
    "slowapi>=0.1.9",
    
    # Timezone
    "pytz>=2024.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise without from inside except
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
